--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2459,6 +2459,7 @@
 		.image img {
 			border-radius: 6px;
 			display: block;
+			position: center;
 		}
 
 		.image.left {
@@ -2475,13 +2476,15 @@
 
 		.image.fit {
 			display: block;
-			margin: 0 0 2em 0;
-			width: 100%;
+			padding: 1em 1.5em 1.5em 1em;
+			margin: auto;
+			width: 50%;
 		}
 
 			.image.fit img {
 				display: block;
 				width: 100%;
+				position: center;
 			}
 
 /* List */
